Вносит финальные правки по критериям

--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
 
   <body class="page__body">
     <header class="main-header main-header--form">
-      <!-- Для реализации без script.js раскомментировать класс "main-header__wrapper-nojs" -->
+      <!-- Для реализации без script.js удалить 265 строку -->
       <div class="main-header__wrapper main-header__wrapper-nojs">
         <div class="main-header__wrapper-logo">
           <a class="main-header__logo" href="index.html">
